--- a/src/css/App.css
+++ b/src/css/App.css
@@ -4,7 +4,11 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 10vmin;
+}
+
+.App-icons {
+  height: 20vmin;
 }
 
 .App-header {
@@ -15,10 +19,6 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
   color: #61dafb;
 }
 
